@startuml Part_2

state Initialization #LightBlue
state Operational #lightGreen
[*]-->Initialization: Power on
Initialization--> Operational: auto
Operational-->Initialization: reset

state Stopped #red 
Operational-->Stopped : Fault detected or Button pushed
Stopped-->Initialization: reset
Stopped--> Operational: Command
@enduml
